# midstac

./: README.md  docker-compose.yml  mcp-config.example.json  pyproject.toml
midstac/: __init__.py  dispatcher.py  extractor.py  models.py  server.py  virtual_dataset.py
midstac/resources/: agent.md  earthaccess_api_full.md  fetch.sh
scripts/: dev.py
tests/: test_dispatcher.py  test_extractor.py
