[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midstac"
version = "0.1.0"
description = "MCP server that uses earthaccess and pystac_client to dispatch queries extracting spatiotemporal parameters from natural language"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GLP-3.0-or-later"}
authors = [
    {name = "betolink"}
    {name = "jhkennedy"}
    {name = "asteiker"}
]
dependencies = [
    "fastmcp>=2.2.0",
    "earthaccess>=0.15.1",
    "pystac-client>=0.7.0",
    "python-dateutil>=2.8.0",
    "aiofiles>=23.1.0",
    "matplotlib",
    "fastparquet",
    "obstore",
    "virtualizarr",
    "dask",
    "distributed",
    "flox",
    "xarray",
    "rioxarray", # use mamba
    "fsspec",
    "geoviews",
    "panel",
    "holoviews",
    "hvplot",
    "zarr>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
midstac = "midstac.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["midstac*"]

[tool.ruff]
line-length = 180
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
