[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midstac"
version = "0.1.0"
description = "MCP server that uses earthaccess and pystac_client to dispatch queries extracting spatiotemporal parameters from natural language"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GLP-3.0-or-later"}
authors = [
    {name = "betolink"},
    {name = "jhkennedy"},
    {name = "asteiker"}
]
dependencies = [
    "fastmcp>=2.2.0",
    "earthaccess>=0.15.1",
    "pystac-client>=0.7.0",
    "python-dateutil>=2.8.0",
    "aiofiles>=23.1.0",
    "matplotlib",
    "cartopy>=0.21.0",
    "fastparquet",
    "obstore",
    "virtualizarr",
    "dask",
    "distributed",
    "flox",
    "xarray",
    "rioxarray",
    "fsspec",
    "zarr>=3.0.0",
    "mcpo>=0.0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mcpo>=0.0.19",
]

[project.scripts]
midstac = "midstac.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["midstac*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001",  # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=midstac",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "earthaccess.*",
    "pystac_client.*",
    "matplotlib.*",
    "fastparquet.*",
    "obstore.*",
    "virtualizarr.*",
    "dask.*",
    "distributed.*",
    "flox.*",
    "xarray.*",
    "rioxarray.*",
    "fsspec.*",
    "geoviews.*",
    "panel.*",
    "holoviews.*",
    "hvplot.*",
    "zarr.*",
]
ignore_missing_imports = true
